# metal-joke-api

./: README.md  main.py  pyproject.toml
metaljokeapi/: main.py
metaljokeapi/.deta/: prog_info  state
tourscraperapi/: joke_generator.py  main.py
tourscraperapi/.deta/: state
