[tool.poetry]
  name = "metaljokeapi"
  version = "0.1.0"
  description = "API that serves metal music jokes"
  authors = ["Dalton Black <projectdjswag@gmail.com>"]

[tool.poetry.scripts]
  start = "metaljokeapi.main:start"

[tool.poetry.dependencies]
  python = "^3.8"
  fastapi = "^0.75.0"
  uvicorn = { extras = ["standard"], version = "^0.17.6" }

[tool.poetry.dev-dependencies]

[build-system]
  requires = ["poetry-core>=1.0.0"]
  build-backend = "poetry.core.masonry.api"
